# test2895

./: README.md
010d3644-9467-11ed-8ba6-4b1b5b6ed378/: config.json  index.js  package-lock.json  replit_zip_error_log.txt
015a2b34-9467-11ed-a5e7-3f2991057154/: index.html  style.css
0430f310-9467-11ed-98f4-77e26ed2aac9/: keep_alive.py  main.py  pyproject.toml
0431c470-9467-11ed-8300-d7afbe0ea317/: README.md
047cf29c-9467-11ed-a714-b39daf75eeb2/: index.js
047d70a0-9467-11ed-b468-578f24b505bd/: replit_zip_error_log.txt
069b6ebe-9467-11ed-84a8-f7003c5dbec8/: .replit  (+1 more)
be46d2de-9466-11ed-b553-7700e9e961a3/: bot.py  constant.py  main.py  pyproject.toml  webserver.py
be46d2de-9466-11ed-b553-7700e9e961a3/.upm/: store.json
be46d2de-9466-11ed-b553-7700e9e961a3/exts/: admin.py  cp.py  crusaderprofile.py  error_handler.py  ocp.py
be46d2de-9466-11ed-b553-7700e9e961a3/utils/: checks.py  extensions.py  log.py  manager.py  roles_id.py
bec21458-9466-11ed-a510-83f7f3f76a00/: .gitignore  .replit  README.md  data.py  executable_main.py  executable_train_hate_classifier.py  file.py  levels.py  lib_hate.py  log.py  moderation.py  pic_poster.py  pyproject.toml  reaction_roles.py  temp.py  translator.py  uwu_translator.py
bec21458-9466-11ed-a510-83f7f3f76a00/.upm/: store.json
bec21458-9466-11ed-a510-83f7f3f76a00/classifier/: general_classifier  general_important_words
c192ec66-9466-11ed-8957-53dcef36cfa7/: bot_info.json  development.txt  keep_alive.py  main.py  pyproject.toml
c192ec66-9466-11ed-8957-53dcef36cfa7/.upm/: store.json
ca22c180-9466-11ed-a0d1-57d2f188977d/: .replit  pyproject.toml
ca22c180-9466-11ed-a0d1-57d2f188977d/.upm/: store.json
cc665074-9466-11ed-9d59-1ff2b0ab6576/: const.py  db_init.py  keep_alive.py  main.py  player.db  pyproject.toml  rank_formula.ods  ranks.json  settings.json  unused_functions.txt
cc665074-9466-11ed-9d59-1ff2b0ab6576/.upm/: store.json
cc665074-9466-11ed-9d59-1ff2b0ab6576/cmds/: basic.py  event.py  fun.py  game.py  jfile.py  joining.py  maintenance.py  moderation.py  ranking_system.py
cc665074-9466-11ed-9d59-1ff2b0ab6576/core/: classes.py
cc665074-9466-11ed-9d59-1ff2b0ab6576/disputils-master/disputils/: pagination.py
(+398 files in other folders)
