[tool.poetry]
name = "repl_python3_beta_DiscordBotPlate"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^2.0.0"
flask = "^1.1.2"
coloredlogs = "^15.0"
discord = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
