[tool.poetry]
name = "Pogchamp"
version = "1.0.0"
description = "A very fun pog bot"
authors = ["Baz"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
colorama = "^0.4.4"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
